fix(docs): udpated redoc documenation
