# openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: Itunes Artwork API Proxy
   description: An API that retrieves entity artwork from Itunes api. Caches and returns in easier format.
@@ -9,10 +9,10 @@ servers:
     description: Local server running on docker
 
 paths:
-  /artist/{artist}/album/{title}:
+  /v1/artist/{artist}/album/{title}:
     get:
-      summary: Returns all albums saved in cache.
-      description: Add search url params to reach out to itunes and begin builing caches.
+      summary: Returns all artwork given album.
+      description: Add search url params search Itunes for album artwork.
       parameters:
         - in: path
           name: artist
